--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- الهيدر -->
     <header class="header-container">
-        <img src="images/header-image.jpeg" alt="معلومات المنتجات والخدمات" class="header-image">
+        <img src="images/IMG_3164.jpeg" alt="معلومات المنتجات والخدمات" class="header-image">
     </header>
 
     <!-- المحتوى الرئيسي -->
