--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
 
-    <!-- 🔹 الهيدر مع الصورة -->
-    <header class="header-container">
-        <img src="images/IMG_3164.jpeg" alt="معلومات المنتجات والخدمات" class="header-image">
-    </header>
-
     <!-- 🔹 القسم الرئيسي -->
-    <section class="relative bg-white py-16 text-center">
-        <div class="container mx-auto">
-            <h1 class="text-5xl font-extrabold text-gray-800">حوّل الزائر إلى عميل</h1>
-            <p class="mt-4 text-lg text-gray-600">أفضل منتج بأعلى جودة، جربه الآن!</p>
-        </div>
-    </section>
+    <header class="header-container">
+    <img src="images/header-image.jpeg" alt="معلومات المنتجات والخدمات" class="header-image">
+</header>
 
     <!-- 🔹 نموذج الطلب -->
     <section class="py-16">
