--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- 🔹 صورة الهيدر -->
     <div class="header-container">
-        <img src="images/header-image.jpeg" alt="الهيدر" class="header-image">
+        <img src="images/IMG_3164.jpeg" alt="الهيدر" class="header-image">
     </div>
 
     <!-- 🔹 نموذج الطلب -->
