--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- 🔹 صورة الهيدر -->
     <div class="header-container">
-        <img src="header-image.jpg" alt="الهيدر" class="header-image">
+        <img src="IMG_3164.jpeg" alt="الهيدر" class="header-image">
     </div>
 
     <!-- 🔹 شريط الشحن السريع -->
