--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- 🔹 صورة الهيدر -->
     <section class="text-center mt-4">
-        <img src="https://raw.githubusercontent.com/Mohamedhajaj511/skills-github-pages/main/images/header-image.jpeg" class="w-full max-w-3xl mx-auto rounded-lg shadow-lg">
+        <img src="/images/IMG_3164.jpeg" class="w-full max-w-3xl mx-auto rounded-lg shadow-lg">
     </section>
 
     <!-- 🔹 المسافة بين الهيدر والنموذج -->
