--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body class="bg-white text-gray-900">
 
     <!-- 🔹 صورة الهيدر -->
-    <section class="text-center mt-4">
-        <img src="/images/IMG_3164.jpeg" class="w-full max-w-3xl mx-auto rounded-lg shadow-lg">
-    </section>
+    < <!-- 🔹 صورة الهيدر -->
+    <div class="header-container">
+        <img src="header-image.jpg" alt="الهيدر" class="header-image">
+    </div>
+
+ 
 
     <!-- 🔹 المسافة بين الهيدر والنموذج -->
     <div class="text-center mt-2 text-lg font-semibold text-gray-700 flex items-center justify-center">
