--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 🔹 صورة الهيدر -->
     < <!-- 🔹 صورة الهيدر -->
     <div class="header-container">
-        <img src="header-image.jpg" alt="الهيدر" class="header-image">
+        <img src="IMG_3164.jpeg" alt="الهيدر" class="header-image">
     </div>
 
  
