--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-white text-gray-900">
 
     <!-- 🔹 صورة الهيدر -->
-    < <!-- 🔹 صورة الهيدر -->
+    <!-- 🔹 صورة الهيدر -->
     <div class="header-container">
         <img src="IMG_3164.jpeg" alt="الهيدر" class="header-image">
     </div>
