--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 
                 <!-- رقم الجوال مع مفتاح الدولة على الجهة اليسرى -->
                 <div class="flex items-center">
-                    <span id="country-code" class="bg-gray-300 p-2 rounded-lg mr-2">+966</span>
                     <input type="tel" id="phone" placeholder="رقم الجوال" required class="input-field flex-1">
+                    <span id="country-code" class="bg-gray-300 p-2 rounded-lg ml-2">+966</span>
                 </div>
+                
+               
 
                 <select id="quantity" required class="input-field">
                     <option value="1">1 قطعة - 9.99$</option>
