--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
             </form>
         </div>
     </section>
+    <!-- زر واتساب العائم -->
+     <a href="https://wa.me/YOUR_NUMBER?text=مرحبًا، أريد المساعدة في طلبي" 
+      id="whatsapp-button" 
+      target="_blank">
+    💬 تواصل معنا عبر واتساب
+     </a>
 
     <script src="script.js"></script>
 </body>
