--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </section>
     <!-- زر واتساب العائم -->
-     <a href="https://wa.me/YOUR_NUMBER?text=مرحبًا، أريد المساعدة في طلبي" 
+     <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
       id="whatsapp-button" 
       target="_blank">
     💬 تواصل معنا عبر واتساب
