--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
             </h2>
             <form id="orderForm" class="mt-4 bg-white p-6 rounded-lg shadow-lg max-w-lg mx-auto">
                 <input type="text" id="name" placeholder="الاسم الكامل" required class="input-field">
+                <!-- 🔹 عنصر لعرض رقم الطلب بعد الإرسال -->
+           <div id="orderNumberContainer" class="hidden text-center mt-4">
+               <h2 class="text-2xl font-bold text-green-600">🎉 تم تقديم طلبك بنجاح!</h2>
+               <p class="text-lg text-gray-700 mt-2">رقم طلبك: <span id="orderNumber" class="font-semibold"></span></p>
+               <p class="text-sm text-gray-600 mt-1">يرجى الاحتفاظ بهذا الرقم لمتابعة طلبك.</p>
+           </div>
 
+                 
                 <!-- اختيار الدولة -->
+                
                 <div class="relative">
                     <select id="country" required class="input-field pr-12">
                         <option value="sa" data-code="+966">🇸🇦 السعودية</option>
