--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
             </form>
         </div>
     </section>
-    <!-- زر واتساب العائم -->
-     <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
-      id="whatsapp-button" 
-      target="_blank">
+    <<!-- 🔹 زر واتساب العائم -->
+    <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
+       id="whatsapp-button" 
+       target="_blank"
+       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
     💬 تواصل معنا عبر واتساب
-     </a>
+    </a>
 
     <script src="script.js"></script>
 </body>
