--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </form>
         </div>
     </section>
-    <<!-- 🔹 زر واتساب العائم -->
+    <!-- 🔹 زر واتساب العائم -->
     <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
        id="whatsapp-button" 
        target="_blank"
