--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
     </section>
 
     <!-- 🔹 زر واتساب العائم -->
+    <!-- 🔹 زر واتساب العائم -->
     <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
        id="whatsapp-button" 
        target="_blank"
-       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg flex items-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="واتساب" class="w-6 h-6 mr-2">
-        تواصل معنا عبر واتساب
-    </a>
+       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
+             alt="واتساب" 
+             class="w-10 h-10"> <!-- 👈 تكبير الأيقونة قليلاً -->
+     </a>
 
     <script src="script.js"></script>
 </body>
