--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     </div>
 
     <!-- 🔹 المسافة بين الهيدر والنموذج -->
-    <div class="text-center mt-2 text-lg font-semibold text-gray-700 flex items-center justify-center">
-        🚚 شحن سريع من 1 يوم إلى 7 أيام
-    </div>
+    <div class="text-center mt-2 text-sm font-medium text-gray-600 flex flex-col items-center justify-center">
+        <p>🚚 للمنتجات الملموسة: توصيل سريع خلال <span class="font-bold">2-5 أيام عمل</span></p>
+        <p>⚡ للمنتجات الرقمية: <span class="font-bold">التسليم فوري</span></p>
+    </div> 
 
     <!-- 🔹 قسم الطلب -->
     <section class="py-6">
