--- a/index.html
+++ b/index.html
@@ -113,15 +113,16 @@
 
     <script src="script.js"></script>
     <!-- 🔹 الفوتر (أسفل الصفحة) -->
-<footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
+<!-- 🔹 الفوتر (أسفل الصفحة) -->
+ <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
     <div class="container mx-auto">
-        <div class="flex justify-center space-x-6">
-            <a href="#" class="hover:text-gray-900 font-medium">سياسة الخصوصية</a>
-            <a href="#" class="hover:text-gray-900 font-medium">سياسة الاسترجاع</a>
-            <a href="#" class="hover:text-gray-900 font-medium">من نحن</a>
+        <div class="flex justify-center space-x-6 space-x-reverse">
+            <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
+            <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
+            <a href="#" class="hover:text-gray-900 font-medium px-3">من نحن</a>
         </div>
         <p class="mt-2">جميع الحقوق محفوظة 2025</p>
     </div>
-</footer>
+ </footer>
 </body>
 </html>
