--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <div id="reviewsList" class="mt-4 bg-gray-100 p-4 rounded-lg shadow-lg max-w-lg mx-auto">
             <p class="text-gray-700">لا توجد تقييمات بعد. كن أول من يشارك برأيه!</p>
             <input type="password" id="adminPassword" placeholder="أدخل كلمة المرور لحذف التقييمات" class="input-field">
+        </div>
         <div class="mt-4">
             <button id="adminLogin" class="btn-glow mt-4 bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
             🔑 تسجيل الدخول كمالك
