--- a/index.html
+++ b/index.html
@@ -97,20 +97,9 @@
         <h3 class="text-xl font-bold text-gray-900">💬 آراء العملاء</h3>
         <div id="reviewsList" class="mt-4 bg-gray-100 p-4 rounded-lg shadow-lg max-w-lg mx-auto">
             <p class="text-gray-700">لا توجد تقييمات بعد. كن أول من يشارك برأيه!</p>
-            <input type="password" id="adminPassword" placeholder="أدخل كلمة المرور لحذف التقييمات" class="input-field">
-        </div>
-        <div class="mt-4">
-            <button id="adminLogin" class="btn-glow mt-4 bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
-            🔑 تسجيل الدخول كمالك
-            </button>
-            <button id="clearReviews" class="btn-glow mt-4 bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded hidden">
-            🗑️ حذف جميع التعليقات
-            </button>
-       
         </div>
     </section>
 
-    <!-- 🔹 زر واتساب العائم -->
     <!-- 🔹 زر واتساب العائم -->
     <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
        id="whatsapp-button" 
@@ -118,21 +107,26 @@
        class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
              alt="واتساب" 
-             class="w-10 h-10"> <!-- 👈 تكبير الأيقونة قليلاً -->
-     </a>
+             class="w-10 h-10">
+    </a>
+
+    <!-- 🔹 الفوتر (أسفل الصفحة) -->
+    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
+        <div class="container mx-auto">
+            <div class="flex justify-center space-x-6 space-x-reverse">
+                <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
+                <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
+                <a href="#" class="hover:text-gray-900 font-medium px-3">من نحن</a>
+            </div>
+            <p class="mt-2">جميع الحقوق محفوظة 2025</p>
+
+            <!-- ✅ زر تسجيل الدخول كمالك -->
+            <button id="adminLoginFooter" class="btn-glow mt-4 bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">
+                M
+            </button>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
-    <!-- 🔹 الفوتر (أسفل الصفحة) -->
-<!-- 🔹 الفوتر (أسفل الصفحة) -->
- <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
-    <div class="container mx-auto">
-        <div class="flex justify-center space-x-6 space-x-reverse">
-            <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
-            <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
-            <a href="#" class="hover:text-gray-900 font-medium px-3">من نحن</a>
-        </div>
-        <p class="mt-2">جميع الحقوق محفوظة 2025</p>
-    </div>
- </footer>
 </body>
 </html>
