--- a/index.html
+++ b/index.html
@@ -111,21 +111,52 @@
     </a>
 
     <!-- 🔹 الفوتر (أسفل الصفحة) -->
-    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
-        <div class="container mx-auto">
-            <div class="flex justify-center space-x-6 space-x-reverse">
-                <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
-                <a href="#" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
-                <a href="#" class="hover:text-gray-900 font-medium px-3">من نحن</a>
-            </div>
-            <p class="mt-2">جميع الحقوق محفوظة 2025</p>
-
-            <!-- ✅ زر تسجيل الدخول كمالك -->
-            <button id="adminLoginFooter" class="btn-glow mt-4 bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">
-                M
-            </button>
+    <!-- 🔹 الفوتر (أسفل الصفحة) -->
+ <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
+    <div class="container mx-auto">
+        <div class="flex justify-center space-x-6 space-x-reverse">
+            <a href="#privacy-policy" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
+            <a href="#return-policy" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
+            <a href="#about-us" class="hover:text-gray-900 font-medium px-3">من نحن</a>
         </div>
-    </footer>
+        <p class="mt-2">جميع الحقوق محفوظة 2025</p>
+
+        <!-- 🔹 زر تسجيل الدخول كمالك -->
+        <button id="adminLogin" class="btn-glow mt-4 bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">
+            M
+        </button>
+    </div>
+ </footer>
+
+<!-- 🔹 أقسام المحتوى الإضافي -->
+ <section id="privacy-policy" class="py-6 bg-white text-center">
+    <h3 class="text-xl font-bold text-gray-900">📜 سياسة الخصوصية</h3>
+    <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed">
+        نحن نقدر خصوصية عملائنا ونلتزم بحماية بياناتهم الشخصية. عند استخدامك لموقعنا أو خدماتنا، فإنك توافق على جمع واستخدام معلوماتك وفقًا لهذه السياسة. نحن نقوم بجمع المعلومات التي تقدمها لنا عند إجراء عملية شراء أو الاشتراك في خدماتنا، ونستخدم هذه المعلومات لمعالجة الطلبات، وتحسين تجربة المستخدم، وتقديم الدعم الفني.<br><br>
+        نحن لا نشارك معلوماتك الشخصية مع أي طرف ثالث إلا في الحالات الضرورية مثل معالجة الدفع أو الشحن. كما نستخدم تقنيات الحماية الحديثة لضمان أمان بياناتك. لديك الحق في طلب حذف بياناتك الشخصية من أنظمتنا في أي وقت عبر التواصل معنا.
+    </div>
+ </section>
+
+ <section id="return-policy" class="py-6 bg-gray-100 text-center">
+    <h3 class="text-xl font-bold text-gray-900">🔄 سياسة الاسترجاع</h3>
+    <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed">
+        نحن نضمن رضا عملائنا عن المنتجات التي نقدمها، ولذلك نوفر سياسة استرجاع لمدة <strong>10 أيام</strong> من تاريخ استلام المنتج، وفقًا للشروط التالية:<br><br>
+        1️⃣ يجب أن يكون المنتج في حالته الأصلية وغير مستخدم، مع جميع الملحقات والتغليف الأصلي.<br>
+        2️⃣ يجب تقديم إثبات الشراء عند طلب الاسترجاع.<br>
+        3️⃣ يتحمل العميل رسوم الشحن عند إرجاع المنتج، ما لم يكن العيب ناتجًا عن خطأ في المنتج أو عيب مصنعي.<br>
+        4️⃣ المنتجات الرقمية غير قابلة للاسترجاع بعد إتمام عملية الشراء، إلا في حالة وجود مشكلة فنية مؤكدة.<br>
+        5️⃣ يتم استرداد المبلغ بنفس طريقة الدفع الأصلية خلال <strong>7 أيام عمل</strong> من تاريخ الموافقة على الطلب.<br><br>
+        لطلب الاسترجاع، يرجى التواصل معنا عبر <a href="mailto:support@example.com" class="text-blue-600 hover:underline">البريد الإلكتروني</a>.
+    </div>
+ </section>
+
+ <section id="about-us" class="py-6 bg-white text-center">
+    <h3 class="text-xl font-bold text-gray-900">👤 من نحن</h3>
+    <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed">
+        أنا <strong>مسوق إلكتروني</strong> متخصص في الترويج للمنتجات عبر منصات التجارة الإلكترونية مثل <strong>علي إكسبرس</strong> و <strong>أمازون</strong>، حيث أساعد العملاء في الحصول على أفضل العروض والخصومات. بالإضافة إلى ذلك، أقوم بتطوير وإطلاق <strong>منتجات رقمية</strong> خاصة بي، والتي توفر حلولًا مبتكرة ومفيدة للمستخدمين في مختلف المجالات.<br><br>
+        أسعى دائمًا إلى تقديم أفضل الخدمات والمنتجات لعملائي، مع التركيز على الجودة والمصداقية. إذا كان لديك أي استفسارات أو ترغب في معرفة المزيد عن العروض والمنتجات التي أقدمها، لا تتردد في <a href="mailto:support@example.com" class="text-blue-600 hover:underline">التواصل معي</a>.
+    </div>
+ </section>
 
     <script src="script.js"></script>
 </body>
