--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="IMG_3185.jpeg" alt="الهيدر" class="header-image">
     </div>
 
-    <!-- 🔹 المسافة بين الهيدر والنموذج -->
+    <!-- 🔹 معلومات التوصيل -->
     <div class="text-center mt-2 text-sm font-medium text-gray-600 flex flex-col items-center justify-center">
         <p>🚚 للمنتجات الملموسة: توصيل سريع خلال <span class="font-bold">2-5 أيام عمل</span></p>
         <p>⚡ للمنتجات الرقمية: <span class="font-bold">التسليم فوري</span></p>
@@ -37,7 +37,7 @@
             <!-- 🔹 نموذج الطلب -->
             <form id="orderForm" class="mt-4 bg-white p-6 rounded-lg shadow-lg max-w-lg mx-auto">
                 <input type="text" id="name" placeholder="الاسم الكامل" required class="input-field">
-
+                
                 <div class="relative">
                     <select id="country" required class="input-field pr-12">
                         <option value="sa" data-code="+966">🇸🇦 السعودية</option>
@@ -111,21 +111,20 @@
     </a>
 
     <!-- 🔹 الفوتر (أسفل الصفحة) -->
-    <!-- 🔹 الفوتر -->
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
         <div class="container mx-auto">
-        <div class="flex justify-center space-x-6 space-x-reverse">
-            <a href="policies.html#privacy-policy-content" class="hover:text-gray-900 font-medium px-3">📜 سياسة الخصوصية</a>
-            <a href="policies.html#return-policy-content" class="hover:text-gray-900 font-medium px-3">🔄 سياسة الاسترجاع</a>
-            <a href="policies.html#about-us-content" class="hover:text-gray-900 font-medium px-3">👤 من نحن</a>
-        </div>
-        <p class="mt-2">جميع الحقوق محفوظة 2025</p>
+            <div class="flex justify-center space-x-6 space-x-reverse">
+                <a href="policies.html#privacy-policy-content" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
+                <a href="policies.html#return-policy-content" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
+                <a href="policies.html#about-us-content" class="hover:text-gray-900 font-medium px-3">من نحن</a>
+            </div>
+            <p class="mt-2">جميع الحقوق محفوظة 2025</p>
 
-        <!-- 🔹 زر M الخاص بالإدارة -->
-        <button id="adminLoginFooter" class="btn-glow mt-4 bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">
-            M
-        </button>
-       </div>
+            <!-- 🔹 زر M الخاص بالإدارة -->
+            <button id="adminLoginFooter" class="btn-glow mt-4 bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">
+                M
+            </button>
+        </div>
     </footer>
     
     <script src="script.js"></script>
