--- a/policies.html
+++ b/policies.html
@@ -3,66 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>السياسات ومن نحن</title>
+    <title>سياسات الموقع</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-white text-gray-900">
 
     <!-- 🔹 الهيدر -->
-    <header class="bg-gray-100 text-center py-4">
-        <h1 class="text-2xl font-bold text-gray-900">📜 السياسات ومن نحن</h1>
+    <header class="bg-gray-200 py-4 text-center">
+        <h1 class="text-3xl font-bold text-gray-800">📜 السياسات والمعلومات</h1>
     </header>
 
-    <!-- 🔹 المحتوى -->
-    <section class="container mx-auto py-6 text-center">
-        <div class="max-w-2xl mx-auto">
-
-            <!-- ✅ سياسة الخصوصية -->
-            <button class="toggle-btn w-full bg-blue-500 text-white py-2 px-4 rounded mb-2" data-target="privacy-policy-content">
-                📜 سياسة الخصوصية
-            </button>
-            <div id="privacy-policy-content" class="hidden bg-white p-4 shadow-md rounded text-gray-700 text-sm leading-relaxed">
-                نحن نقدر خصوصية عملائنا ونلتزم بحماية بياناتهم الشخصية. عند استخدامك لموقعنا أو خدماتنا، فإنك توافق على جمع واستخدام معلوماتك وفقًا لهذه السياسة. 
-                نحن نقوم بجمع المعلومات التي تقدمها لنا عند إجراء عملية شراء أو الاشتراك في خدماتنا، ونستخدم هذه المعلومات لمعالجة الطلبات، وتحسين تجربة المستخدم، وتقديم الدعم الفني.<br><br>
-                نحن لا نشارك معلوماتك الشخصية مع أي طرف ثالث إلا في الحالات الضرورية مثل معالجة الدفع أو الشحن. كما نستخدم تقنيات الحماية الحديثة لضمان أمان بياناتك. 
-                لديك الحق في طلب حذف بياناتك الشخصية من أنظمتنا في أي وقت عبر التواصل معنا.
-            </div>
-
-            <!-- ✅ سياسة الاسترجاع -->
-            <button class="toggle-btn w-full bg-green-500 text-white py-2 px-4 rounded mt-4 mb-2" data-target="return-policy-content">
-                🔄 سياسة الاسترجاع
-            </button>
-            <div id="return-policy-content" class="hidden bg-white p-4 shadow-md rounded text-gray-700 text-sm leading-relaxed">
-                نحن نضمن رضا عملائنا عن المنتجات التي نقدمها، ولذلك نوفر سياسة استرجاع لمدة <strong>10 أيام</strong> من تاريخ استلام المنتج، وفقًا للشروط التالية:<br><br>
-                1️⃣ يجب أن يكون المنتج في حالته الأصلية وغير مستخدم، مع جميع الملحقات والتغليف الأصلي.<br>
-                2️⃣ يجب تقديم إثبات الشراء عند طلب الاسترجاع.<br>
-                3️⃣ يتحمل العميل رسوم الشحن عند إرجاع المنتج، ما لم يكن العيب ناتجًا عن خطأ في المنتج أو عيب مصنعي.<br>
-                4️⃣ المنتجات الرقمية غير قابلة للاسترجاع بعد إتمام عملية الشراء، إلا في حالة وجود مشكلة فنية مؤكدة.<br>
-                5️⃣ يتم استرداد المبلغ بنفس طريقة الدفع الأصلية خلال <strong>7 أيام عمل</strong> من تاريخ الموافقة على الطلب.<br><br>
-                لطلب الاسترجاع، يرجى التواصل معنا عبر <a href="mailto:support@example.com" class="text-blue-600 hover:underline">البريد الإلكتروني</a>.
-            </div>
-
-            <!-- ✅ من نحن -->
-            <button class="toggle-btn w-full bg-orange-500 text-white py-2 px-4 rounded mt-4 mb-2" data-target="about-us-content">
-                👤 من نحن
-            </button>
-            <div id="about-us-content" class="hidden bg-white p-4 shadow-md rounded text-gray-700 text-sm leading-relaxed">
-                أنا <strong>مسوق إلكتروني</strong> متخصص في الترويج للمنتجات عبر منصات التجارة الإلكترونية مثل <strong>علي إكسبرس</strong> و <strong>أمازون</strong>، 
-                حيث أساعد العملاء في الحصول على أفضل العروض والخصومات. بالإضافة إلى ذلك، أقوم بتطوير وإطلاق <strong>منتجات رقمية</strong> خاصة بي، والتي توفر حلولًا مبتكرة ومفيدة للمستخدمين في مختلف المجالات.<br><br>
-                أسعى دائمًا إلى تقديم أفضل الخدمات والمنتجات لعملائي، مع التركيز على الجودة والمصداقية. 
-                إذا كان لديك أي استفسارات أو ترغب في معرفة المزيد عن العروض والمنتجات التي أقدمها، لا تتردد في 
-                <a href="mailto:support@example.com" class="text-blue-600 hover:underline">التواصل معي</a>.
-            </div>
-
+    <!-- 🔹 سياسة الخصوصية -->
+    <section id="privacy-policy-content" class="py-6 text-center">
+        <h2 class="text-2xl font-bold text-gray-900">📜 سياسة الخصوصية</h2>
+        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-right">
+            نحن نقدر خصوصية عملائنا ونلتزم بحماية بياناتهم الشخصية. عند استخدامك لموقعنا أو خدماتنا، فإنك توافق على جمع واستخدام معلوماتك وفقًا لهذه السياسة.  
+            نقوم بجمع المعلومات التي تقدمها لنا عند إجراء عملية شراء أو الاشتراك في خدماتنا، ونستخدم هذه المعلومات لمعالجة الطلبات، وتحسين تجربة المستخدم، وتقديم الدعم الفني.  
+            نحن لا نشارك معلوماتك الشخصية مع أي طرف ثالث إلا في الحالات الضرورية مثل معالجة الدفع أو الشحن. كما نستخدم تقنيات الحماية الحديثة لضمان أمان بياناتك.  
+            لديك الحق في طلب حذف بياناتك الشخصية من أنظمتنا في أي وقت عبر التواصل معنا.
         </div>
     </section>
 
-    <!-- 🔹 زر الرجوع إلى الصفحة الرئيسية -->
-    <div class="text-center mt-6">
-        <a href="index.html" class="bg-gray-700 text-white py-2 px-4 rounded">🔙 الرجوع إلى الصفحة الرئيسية</a>
+    <!-- 🔹 سياسة الاسترجاع -->
+    <section id="return-policy-content" class="py-6 bg-gray-100 text-center">
+        <h2 class="text-2xl font-bold text-gray-900">🔄 سياسة الاسترجاع</h2>
+        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-right">
+            نحن نضمن رضا عملائنا عن المنتجات التي نقدمها، ولذلك نوفر سياسة استرجاع لمدة <strong>10 أيام</strong> من تاريخ استلام المنتج، وفقًا للشروط التالية:  
+            <ul class="list-disc text-right pl-6 mt-2">
+                <li>يجب أن يكون المنتج في حالته الأصلية وغير مستخدم، مع جميع الملحقات والتغليف الأصلي.</li>
+                <li>يجب تقديم إثبات الشراء عند طلب الاسترجاع.</li>
+                <li>يتحمل العميل رسوم الشحن عند إرجاع المنتج، ما لم يكن العيب ناتجًا عن خطأ في المنتج أو عيب مصنعي.</li>
+                <li>المنتجات الرقمية غير قابلة للاسترجاع بعد إتمام عملية الشراء، إلا في حالة وجود مشكلة فنية مؤكدة.</li>
+                <li>يتم استرداد المبلغ بنفس طريقة الدفع الأصلية خلال <strong>7 أيام عمل</strong> من تاريخ الموافقة على الطلب.</li>
+            </ul>
+            <br>
+            لطلب الاسترجاع، يرجى التواصل معنا عبر <a href="mailto:support@example.com" class="text-blue-600 hover:underline">البريد الإلكتروني</a>.
+        </div>
+    </section>
+
+    <!-- 🔹 من نحن -->
+    <section id="about-us-content" class="py-6 text-center">
+        <h2 class="text-2xl font-bold text-gray-900">👤 من نحن</h2>
+        <div class="mt-4 px-6 max-w-2xl mx-auto text-gray-700 text-sm leading-relaxed text-right">
+            أنا <strong>مسوق إلكتروني</strong> متخصص في الترويج للمنتجات عبر منصات التجارة الإلكترونية مثل <strong>علي إكسبرس</strong> و <strong>أمازون</strong>، حيث أساعد العملاء في الحصول على أفضل العروض والخصومات.  
+            بالإضافة إلى ذلك، أقوم بتطوير وإطلاق <strong>منتجات رقمية</strong> خاصة بي، والتي توفر حلولًا مبتكرة ومفيدة للمستخدمين في مختلف المجالات.  
+            أسعى دائمًا إلى تقديم أفضل الخدمات والمنتجات لعملائي، مع التركيز على الجودة والمصداقية.  
+            إذا كان لديك أي استفسارات أو ترغب في معرفة المزيد عن العروض والمنتجات التي أقدمها، لا تتردد في <a href="mailto:support@example.com" class="text-blue-600 hover:underline">التواصل معي</a>.
+        </div>
+    </section>
+
+    <!-- 🔹 زر العودة -->
+    <div class="text-center py-6">
+        <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded">
+            🔙 العودة إلى الصفحة الرئيسية
+        </a>
     </div>
 
-    <script src="policies.js"></script>
+    <!-- 🔹 الفوتر -->
+    <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
+        <div class="container mx-auto">
+            <p class="mt-2">جميع الحقوق محفوظة 2025</p>
+        </div>
+    </footer>
+
 </body>
 </html>
