--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
         <h3 class="text-xl font-bold text-gray-900">💬 آراء العملاء</h3>
         <div id="reviewsList" class="mt-4 bg-gray-100 p-4 rounded-lg shadow-lg max-w-lg mx-auto">
             <p class="text-gray-700">لا توجد تقييمات بعد. كن أول من يشارك برأيه!</p>
+            <!-- 🔹 زر حذف التقييمات (يظهر فقط بعد تسجيل الدخول كمالك) -->
+        <button id="clearReviews" class="btn-glow mt-4 bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded hidden">
+    🗑️ حذف جميع التقييمات
+        </button>
         </div>
     </section>
 
