--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
         <button id="clearReviews" class="btn-glow mt-4 bg-red-500 hover:bg-red-700 text-white py-2 px-4 rounded hidden">
     🗑️ حذف جميع التقييمات
         </button>
+        <button id="logoutAdmin" class="btn-glow mt-4 bg-gray-500 hover:bg-gray-700 text-white py-2 px-4 rounded hidden">
+    🚪 تسجيل الخروج
+        </button>
         </div>
     </section>
 
