--- a/index.html
+++ b/index.html
@@ -75,15 +75,30 @@
         </div>
     </section>
 
-    <!-- 🔹 زر واتساب العائم -->
-    <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
-       id="whatsapp-button" 
-       target="_blank"
-       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
-             alt="واتساب" 
-             class="w-10 h-10">
-    </a>
+    <!-- 🔹 عرض المنتجات مع الوصف -->
+    <section class="py-8 bg-gray-100 text-center">
+        <div class="container mx-auto max-w-5xl">
+            <h2 class="text-3xl font-bold text-gray-900 mb-6">💎 منتجاتنا المميزة!</h2>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <!-- المنتج الأول -->
+                <div class="bg-white p-4 rounded-lg shadow-lg">
+                    <img src="product1.jpeg" alt="منتج 1" class="rounded-lg mx-auto mb-3">
+                    <h3 class="text-xl font-bold text-gray-900">✨ منتج الفخامة الأصلي</h3>
+                    <p class="text-gray-700 mt-2">مصنوع من أجود المواد لتجربة لا مثيل لها. يجمع بين الفخامة والأداء المذهل.</p>
+                    <button class="btn-glow mt-4">📦 اطلبه الآن</button>
+                </div>
+
+                <!-- المنتج الثاني -->
+                <div class="bg-white p-4 rounded-lg shadow-lg">
+                    <img src="product2.jpeg" alt="منتج 2" class="rounded-lg mx-auto mb-3">
+                    <h3 class="text-xl font-bold text-gray-900">🌿 منتج العناية بالبشرة</h3>
+                    <p class="text-gray-700 mt-2">تركيبة طبيعية تمنح بشرتك النعومة والانتعاش، مثالي لكل أنواع البشرة.</p>
+                    <button class="btn-glow mt-4">📦 اطلبه الآن</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- 🔹 الفوتر (أسفل الصفحة) -->
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
