--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
         <div class="container mx-auto max-w-5xl">
             <h2 class="text-3xl font-bold text-gray-900 mb-6">💎 منتجاتنا المميزة!</h2>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- المنتج الأول -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <img src="product1.jpeg" alt="منتج 1" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">✨ منتج الفخامة الأصلي</h3>
                     <p class="text-gray-700 mt-2">مصنوع من أجود المواد لتجربة لا مثيل لها. يجمع بين الفخامة والأداء المذهل.</p>
-                    <button class="btn-glow mt-4">📦 اطلبه الآن</button>
                 </div>
 
                 <!-- المنتج الثاني -->
@@ -94,13 +93,33 @@
                     <img src="product2.jpeg" alt="منتج 2" class="rounded-lg mx-auto mb-3">
                     <h3 class="text-xl font-bold text-gray-900">🌿 منتج العناية بالبشرة</h3>
                     <p class="text-gray-700 mt-2">تركيبة طبيعية تمنح بشرتك النعومة والانتعاش، مثالي لكل أنواع البشرة.</p>
-                    <button class="btn-glow mt-4">📦 اطلبه الآن</button>
+                </div>
+
+                <!-- المنتج الثالث -->
+                <div class="bg-white p-4 rounded-lg shadow-lg">
+                    <img src="product3.jpeg" alt="منتج 3" class="rounded-lg mx-auto mb-3">
+                    <h3 class="text-xl font-bold text-gray-900">☕ قهوة فاخرة محمصة</h3>
+                    <p class="text-gray-700 mt-2">استمتع بطعم القهوة الأصلية المحمصة بعناية فائقة، مثالية لمحبي القهوة الأصيلة.</p>
+                </div>
+
+                <!-- المنتج الرابع -->
+                <div class="bg-white p-4 rounded-lg shadow-lg">
+                    <img src="product4.jpeg" alt="منتج 4" class="rounded-lg mx-auto mb-3">
+                    <h3 class="text-xl font-bold text-gray-900">🕯️ شمعة عطرية طبيعية</h3>
+                    <p class="text-gray-700 mt-2">شمعة مصنوعة من شمع طبيعي 100%، تمنحك أجواءً هادئة ورائحة منعشة تدوم طويلاً.</p>
+                </div>
+
+                <!-- المنتج الخامس -->
+                <div class="bg-white p-4 rounded-lg shadow-lg">
+                    <img src="product5.jpeg" alt="منتج 5" class="rounded-lg mx-auto mb-3">
+                    <h3 class="text-xl font-bold text-gray-900">🎧 سماعات لاسلكية بجودة عالية</h3>
+                    <p class="text-gray-700 mt-2">استمتع بجودة صوت استثنائية وتجربة استماع بلا أسلاك، مصممة لأقصى راحة وأداء.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 🔹 الفوتر (أسفل الصفحة) -->
+    <!-- 🔹 الفوتر -->
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
         <div class="container mx-auto">
             <div class="flex justify-center space-x-6 space-x-reverse">
@@ -111,7 +130,7 @@
             <p class="mt-2">جميع الحقوق محفوظة 2025</p>
         </div>
     </footer>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
