--- a/index.html
+++ b/index.html
@@ -119,14 +119,19 @@
         </div>
     </section>
 
+    <!-- 🔹 زر واتساب العائم -->
+    <a href="https://wa.me/966541827904?text=مرحبًا، أريد المساعدة في طلبي" 
+       id="whatsapp-button" 
+       target="_blank"
+       class="fixed bottom-4 right-4 bg-green-500 text-white p-3 rounded-full shadow-lg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
+             alt="واتساب" 
+             class="w-10 h-10">
+    </a>
+
     <!-- 🔹 الفوتر -->
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
         <div class="container mx-auto">
-            <div class="flex justify-center space-x-6 space-x-reverse">
-                <a href="policies.html#privacy-policy-content" class="hover:text-gray-900 font-medium px-3">سياسة الخصوصية</a>
-                <a href="policies.html#return-policy-content" class="hover:text-gray-900 font-medium px-3">سياسة الاسترجاع</a>
-                <a href="policies.html#about-us-content" class="hover:text-gray-900 font-medium px-3">من نحن</a>
-            </div>
             <p class="mt-2">جميع الحقوق محفوظة 2025</p>
         </div>
     </footer>
